Fix overflowing icon style

--- a/src/styles/components/contents-view/_sidebar.scss
+++ b/src/styles/components/contents-view/_sidebar.scss
@@ -108,7 +108,7 @@
 
     &__openIssues {
       position: absolute;
-      left: 90%;
+      left: 85%;
       top: 90%;
 
       padding: 0.25rem 0.3rem;
